se da formato a recetas y se modifica el inicio

--- a/secciones/recetas.html
+++ b/secciones/recetas.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="../css/style.css">
     </head>
 
@@ -31,35 +32,16 @@
 
     <section class="recetas">
         <h1>Las recetas del Dealer</h1>
-        <!--inicio galería de recetas-->
-        <div class="recetas--galeria">
-            <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
-            <div><img src="../dealers-drinks-images/receta-negroni-foto.png" alt="negroni"></div>
-            <div><img src="../dealers-drinks-images/receta-clarito-foto.jpg" alt="clarito"></div>
-            <div><img src="../dealers-drinks-images/receta-caipiroska-foto.jpg" alt="caipi"></div>
-            <div><img src="../dealers-drinks-images/receta-voodoo-foto.jpg" alt="voodoo"></div>
-            <div><img src="../dealers-drinks-images/receta-long-island-foto.png" alt="long island iced tea"></div>
-        </div>
-        <!--fin galería de recetas-->
-        <article class="voodoo">
-            <h2>VOODOO</h2>
-            <div class="voodoo-ingredientes">
-                <ul>
-                    <li>30 ml (1 onza) de ron dorado</li>
-                    <li>15 ml de vermut rosso</li>
-                    <li>Jugo de manzana</li>
-                    <li>Limón</li>
-                </ul>
-            </div>
-            <div class="voodoo-preparacion">
-                <h3>PREPARACIÓN</h3>
-                <P>
-                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón
-                    recién exprimido. Completamos con el jugo de manzana, puede ser el que más te guste, o incluso jugo
-                    natural de fruta. El toque final es una rodaja de limón.
-                </P>
-            </div>
 
+        <article class="tom-collins"> <!--inicio receta tom collins-->
+                <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
+                <div><img src="../dealers-drinks-images/tom-collins-ingredientes.png" alt="tom collins tom-collins-ingredientes"></div>
+                <div class="preparacion-tom-collins">
+                <h2>PREPARACIÓN</h2>
+                <p>En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e integramos bien los ingredientes con una cuchara. Agregamos la soda hasta completar el vaso y volvemos a integrar. Por último decoramos con una rodaja de limón y una cereza.</p>
+                </div>
+
+ 
         </article>
 
 
