--- a/index.html
+++ b/index.html
@@ -36,38 +36,70 @@
         </div>
         <!--fin visión dealers-->
         <hr>
-        <section>
+        <div>
             <!--inicio galería-->
-            <div class="inicio--galeria">
-                <div class="div1"><img src="./dealers-drinks-images/inicio-cocteleria-1.jpg" alt="gintonic"> </div>
-                <div class="div2"><img src="./dealers-drinks-images/inicio-whisky-2.jpg" alt="whisky"></div>
-                <div class="div3"><img src="./dealers-drinks-images/inicio-vermut-3.jpg" alt="vermucito"></div>
-                <div class="div4"><img src="./dealers-drinks-images/inicio-negroni-4.jpg" alt="negroni"></div>
-                <div class="div5"><img src="./dealers-drinks-images/inicio-licor-5.jpg" alt="licor"></div>
-                <div class="div6"><img src="./dealers-drinks-images/inicio-barra-6.jpg" alt="bartender"></div>
+            <div class="inicio--galeria1">
+                <img src="./dealers-drinks-images/inicio-whisky.jpg" alt="whisky">
+                <img src="./dealers-drinks-images/inicio-gintonic.jpg" alt="ginandtonic">
+                <img src="./dealers-drinks-images/inicio-negroni.jpg" alt="negroni">
+
             </div>
             <!--fin galería-->
-        </section>
+        </div>
         <section class="espirituosas">
+            <div>
+                <!--inicio definición de bebidas espirituosas-->
+                <h2>¿Qué son las bebidas espirituosas?</h2>
+                <p>
+                    Posiblemente escuchaste el termino bebida espirituosa en algún momento, pero no todos conocen
+                    exactamente de que se trata. Se refiere básicamente a un grupo determinado de bebidas alcohólicas y
+                    algunas están excluidas del mismo. El término data de una interesante historia, a continuación te
+                    contamos un poco más.
+                </p>
+                <p>
+                    Se consideran espirituosas a todas aquellas bebidas con una graduación de al menos 15 %, procedentes
+                    de la destilación de diferentes materias primas agrícolas como el cereal, la uva, la papa, hierbas y
+                    botánicos.
+                    Algunos ejemplos son, whisky, gin, vodka, ron, tequila, pisco, licores, brandy, coñac, grapa, etc.
+                    Estos son previamente fermentados en algunos casos, y luego pasan por los diferentes métodos y
+                    cantidades de destilación, dependiendo del tipo y calidad de cada bebida (el vino y la cerveza están
+                    excluidos de esta categoría, ya que si bien ambos son bebidas alcohólicas procedentes de la
+                    fermentación
+                    de la uva y de la malta, estos no se destilan).
+                </p>
+            </div>
+        </section>
+        <!--inicio definición de bebidas espirituosas-->
+        <div>
+            <!--inicio galería2-->
+            <div class="inicio--galeria2">
+                <img src="./dealers-drinks-images/inicio-mojito.jpg" alt="mojito">
+                <img src="./dealers-drinks-images/inicio-coctel.jpg" alt="coctel">
+                <img src="./dealers-drinks-images/inicio-bloody.jpg" alt="bloody-mary">
+
+            </div>
+            <!--fin galería2-->
+
+            <section class="espirituosas--historia">
+                <!--inicio historia "espirituosas"-->
                 <div>
-                    <!--inicio definición de bebidas espirituosas-->
-                    <h2>¿Qué son las bebidas espirituosas?</h2>
-                    <p class="espirituosas--definicion">
-                        Posiblemente escuchaste el termino bebida espirituosa en algún momento, pero no todos conocen exactamente de que se trata. Se refiere básicamente a un grupo determinado de bebidas alcohólicas y algunas están excluidas del mismo. El término data de una interesante historia, a continuación te contamos un poco más.
-                        Se consideran espirituosas a todas aquellas bebidas con una graduación de al menos 15 %, procedentes de la destilación de diferentes materias primas agrícolas como el cereal, la uva, la papa, hierbas y botánicos.
-                        Algunos ejemplos son, whisky, gin, vodka, ron, tequila, pisco, licores, brandy, coñac, grapa, etc.
-                        Estos son previamente fermentados en algunos casos, y luego pasan por los diferentes métodos y cantidades de destilación, dependiendo del tipo y calidad de cada bebida (el vino y la cerveza están excluidos de esta categoría, ya que si bien ambos son bebidas alcohólicas procedentes de la fermentación
-                        de la uva y de la malta, estos no se destilan).
-                    </p>
                     <h3>Te contamos la historia del término "espirituosas"</h3>
-                    <p class="espirituosas--historia">
-                        Alrededor del siglo XIII, se utilizaban pócimas y medicinas, en algunos casos destiladas, para sanar dolencias o devolver el espíritu de las personas, como se solía decir.
-                        Estas bebidas cobraron popularidad con el tiempo y comenzaron a ser consumidas con fines recreativos varios años más tarde. La gente solía decir que veía espíritus en el proceso de evaporación de gases producto de la destilación.
-                        En la actualidad sigue vigente el término, ya que en el proceso de separación del agua y el alcohol, se dice que se extrae el espíritu de la materia prima utilizada.
+                    <p>
+                        Alrededor del siglo XIII, se utilizaban pócimas y medicinas, en algunos casos destiladas, para
+                        sanar dolencias o devolver el espíritu de las personas, como se solía decir.
+                    </p>
+                    <p>
+                        Estas bebidas cobraron popularidad con el tiempo y comenzaron a ser consumidas con fines
+                        recreativos varios años más tarde. La gente solía decir que veía espíritus en el proceso de
+                        evaporación de gases producto de la destilación.
+                    </p>
+                    <p>
+                        En la actualidad sigue vigente el término, ya que en el proceso de separación del agua y el
+                        alcohol, se dice que se extrae el espíritu de la materia prima utilizada.
                     </p>
                 </div>
-        </section>
-            <!--fin definición de bebidas espirituosas-->
+            </section>
+            <!--fin historia "espirituosas"-->
         </div>
         <div class="listas">
             <!--espacio para listas de reproducción-->
