Finalizada sección recetas

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="../css/style.css">
     </head>
 <body>
@@ -26,13 +27,18 @@
         </nav>
 
     </header>
-
     <Section class="productos">
         <h1>Espirituosas exclusivas</h1>
-
-
-</Section>
-
+    </Section>
+    <div class="container">
+        <div class="productos-iconos">
+            <a href=""><img src="../dealers-drinks-images/icono-whisky.jpeg" alt="icono-whisky"></a>
+            <a href=""><img src="../dealers-drinks-images/icono-gin.jpeg" alt="icono-gin"></a>
+            <a href=""><img src="../dealers-drinks-images/icono-vodka.jpeg" alt="icono-vodka"></a>
+            <a href=""><img src="../dealers-drinks-images/icono-ron.jpeg" alt="icono-ron"></a>
+            <a href=""><img src="../dealers-drinks-images/icono-varios.jpeg" alt="icono-varios"></a>
+        </div>
+    </div>
 
 
 
