--- a/secciones/recetas.html
+++ b/secciones/recetas.html
@@ -33,15 +33,95 @@
     <section class="recetas">
         <h1>Las recetas del Dealer</h1>
 
-        <article class="tom-collins"> <!--inicio receta tom collins-->
-                <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
-                <div><img src="../dealers-drinks-images/tom-collins-ingredientes.png" alt="tom collins tom-collins-ingredientes"></div>
-                <div class="preparacion-tom-collins">
+        <article class="tom-collins">
+            <!--inicio receta tom collins-->
+            <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
+            <div><img src="../dealers-drinks-images/tom-collins-ingredientes.png"
+                    alt="tom collins tom-collins-ingredientes"></div>
+            <div class="preparacion-tom-collins">
                 <h2>PREPARACIÓN</h2>
-                <p>En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e integramos bien los ingredientes con una cuchara. Agregamos la soda hasta completar el vaso y volvemos a integrar. Por último decoramos con una rodaja de limón y una cereza.</p>
-                </div>
+                <p>En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e
+                    integramos bien los ingredientes con una cuchara. Agregamos la soda hasta completar el vaso y
+                    volvemos a integrar. Por último decoramos con una rodaja de limón y una cereza.</p>
+            </div>
 
- 
+
+        </article>
+        <article class="negroni">
+            <div><img src="../dealers-drinks-images/receta-negroni-foto.png" alt="negroni"></div>
+            <div><img src="../dealers-drinks-images/negroni-ingredientes.png" alt="negroni-ingredientes"></div>
+            <div class="preparacion-negroni">
+                <h2>PREPARACIÓN</h2>
+                <P>En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien
+                    con una cuchara, por último le sumamos la rodaja de naranja. Este cóctel es ideal prepararlo
+                    refrescado, en un vaso de compensación pero si no contamos con esta herramienta podemos hacerlo
+                    directo en el vaso.</P>
+            </div>
+
+        </article>
+        <article class="voodoo">
+            <div><img src="../dealers-drinks-images/receta-voodoo-foto.jpg" alt="voodoo"></div>
+            <div><img src="../dealers-drinks-images/voodoo-ingredientes.jpg" alt="voodo-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón recién exprimido. Completamos con jugo de manzana. 
+                    El toque final es una rodaja de limón.
+                                    </P>
+            </div>
+
+        </article>
+        <article class="long-island">
+            <div><img src="../dealers-drinks-images/receta-long-island-foto.png" alt="long-island-iced-tea"></div>
+            <div><img src="../dealers-drinks-images/long-island-ingredientes.png" alt="long-island-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón recién exprimido. Completamos con jugo de manzana. 
+                    El toque final es una rodaja de limón.
+                                    </P>
+            </div>
+
+        </article>
+        <article class="clarito">
+            <div><img src="../dealers-drinks-images/receta-clarito-foto.jpg" alt="clarito"></div>
+            <div><img src="../dealers-drinks-images/clarito-ingredientes.jpg" alt="clarito-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En un vaso de composición lleno de hielo agregamos 2 onzas de gin, media onza de vermut seco o extra seco, integramos bien con una cuchara larga y colamos en una copa cóctel sin hielo, previamente enfriada. Antes de agregarle la piel de limón, debemos apretarla para que suelte su aceite esencial dentro del cóctel.  
+                </P>
+            </div>
+        </article>
+        <article class="boulevardier">
+            <div><img src="../dealers-drinks-images/receta-boulevardier-foto.png" alt="boulevardier"></div>
+            <div><img src="../dealers-drinks-images/boulevardier-ingredientes.png" alt="boulevardier-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien con una cuchara. Por último le sumamos la rodaja de naranja. 
+                </P>
+            </div>
+        </article>
+        <article class="daiquiri">
+            <div><img src="../dealers-drinks-images/receta-daiquiri-foto.jpeg" alt="daiquiri"></div>
+            <div><img src="../dealers-drinks-images/daiquiri-Ingredientes.jpeg" alt="daiquiri-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En una coctelera agregá todos los ingredientes incluyendo las frutillas limpias y cortadas en trozos. Machacalas con un mortero y llená la coctelera de hielo. Cerrala con firmeza y agitala durante diez segundos. Por último, colá el contenido con la ayuda de un colador oruga, dentro de  una copa cóctel sin hielo previamente enfriada.   
+                </P>
+            </div>
+        </article>
+        <article class="caipiroska">
+            <div><img src="../dealers-drinks-images/receta-caipiroska-foto.jpg" alt="caipiroska"></div>
+            <div><img src="../dealers-drinks-images/caipiroska-ingredientes.jpg" alt="caipiroska-ingtredientes"></div>
+            <div>
+                <h2>PREPARACIÓN</h2>
+                <P>
+                    En un vaso de trago corto colocamos media lima cortada en trozos. Agregamos 2 o 3 cucharadas de azúcar o 15ml (media onza) de almíbar. Volcamos el vodka en la preparación, machacamos suavemente la lima y luego le agregamos el hielo molido hasta colmar el vaso. Finalmente integramos bien con una cuchara.
+                </P>
+            </div>
         </article>
 
 
