se agregan marcas

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -32,11 +32,200 @@
     </Section>
     <div class="container">
         <div class="productos-iconos">
-            <a href=""><img src="../dealers-drinks-images/icono-whisky.jpeg" alt="icono-whisky"></a>
-            <a href=""><img src="../dealers-drinks-images/icono-gin.jpeg" alt="icono-gin"></a>
-            <a href=""><img src="../dealers-drinks-images/icono-vodka.jpeg" alt="icono-vodka"></a>
-            <a href=""><img src="../dealers-drinks-images/icono-ron.jpeg" alt="icono-ron"></a>
-            <a href=""><img src="../dealers-drinks-images/icono-varios.jpeg" alt="icono-varios"></a>
+            <a href="#whisky"><img src="../dealers-drinks-images/icono-whisky.jpeg" alt="icono-whisky"></a>
+            <a href="#gin"><img src="../dealers-drinks-images/icono-gin.jpeg" alt="icono-gin"></a>
+            <a href="#vodka"><img src="../dealers-drinks-images/icono-vodka.jpeg" alt="icono-vodka"></a>
+            <a href="#ron"><img src="../dealers-drinks-images/icono-ron.jpeg" alt="icono-ron"></a>
+            <a href="#varios"><img src="../dealers-drinks-images/icono-varios.jpeg" alt="icono-varios"></a>
+        </div>
+    </div>
+    <div class="container">
+        <div id="whisky">
+            <ul> WHISKY
+                <ul> BLEND
+                    <li> Antiquary Red 700 ml </li>
+                    <li> Ballantines 1 L </li>
+                    <li> Ballantines 7 años 700 ml </li>
+                    <li> Ballantines 12 años 750 ml </li>
+                    <li> Chivas 12 años 750 ml </li>
+                    <li> Chivas Extra 13 años 750 ml  </li>
+                    <li> Chivas 15 años 750 ml </li>
+                    <li> Chivas 18 años 750 ml </li>
+                    <li> Chivas Royal Salute 21 años 700 ml </li>
+                    <li> Famous Grouse 750 ml </li>
+                    <li> J&B 750 ml </li>
+                    <li> Johnnie Walker Red Icon 700 ml </li>
+                    <li> Johnnie Walker Red 1 L (Sin estuche) </li>
+                    <li> Johnnie Walker Double Black 750 ml </li>
+                    <li> Johnnie Walker Swing 750 ml </li>
+                    <li> Johnnie Walker Gold Reserve 750 ml </li>
+                    <li> Johnnie Walker Green 15 años 750 ml </li>
+                    <li> Johnnie Walker 18 años 750 ml </li>
+                    <li> Johnnie Walker XR 21 años 750 ml </li>
+                    <li> Old Parr 12 años 750 ml </li>
+                    <li> Sir Edwards 700 ml </li>
+                    <li> Sir Edwards Beer Reserve 700 ml </li>
+                    <li> White & Mackay 700 ml </li>
+                </ul>
+                <ul> SINGLE MALT
+                    <li> Bruichladdich Classic Laddie 700 ml </li>
+                    <li> Cardhu 12 años 700 ml </li>
+                    <li> Glenfiddich 12 años 750 ml </li>
+                    <li> Glenfiddich 15 años 750 ml </li>
+                    <li> Glenfiddich 18 años 750 ml </li>
+                    <li> Glen Moray Classic 700 ml </li>
+                    <li> Glen Moray Port Cask Finish 700 ml </li>
+                    <li> Glen Moray Sherry Cask Finish 700 ml </li>
+                    <li> Glen Moray Heritage 12 años 700 ml </li>
+                    <li> Highland Park 700 ml </li>
+                    <li> Jura Superstition 700 ml </li>
+                    <li> Scapa Glansa 750 ml </li>
+                    <li> Singleton 12 años 700 ml </li>
+                    <li> Singleton 15 años 700 ml </li>
+                    <li> The Chita Single Grain 700 ml </li>
+                    <li> The Dalmore 15 años 700 ml </li>
+                    <li> The Glenlivet Founders Reserve 750 ml </li>
+                    <li> The Glenlivet 12 años 700 ml </li>
+                    <li> The Glenrothes 10 años 700 ml </li>
+                    <li> The Glenrothes 12 años 700 ml </li>
+                    <li> The Macallan Triple Cask 12 años 700 ml </li>
+                    <li> The Macallan Double Cask 12 años 700 ml </li>
+                    <li> The Macallan Sherry Oak 12 años 700 ml </li>
+                </ul>
+                <ul> IRISH WHISKEY
+                    <li> Jameson 750 ml </li>
+                    <li> Jameson Cask Ipa 750 ml </li>
+                </ul>
+                <ul> AMERICAN WHISKEY
+                    <li> Bulleit 700 ml </li>
+                    <li> Gentleman Jack 1 L </li>
+                    <li> Jack Daniel´s 750 ml </li>
+                    <li> Jack Daniel´s 1 L </li>
+                    <li> Jim Beam 1 L </li>
+                    <li> Jim Beam Black 750 ml </li>
+                    <li> Wild Turkey 40º 750 ml </li>
+                    <li> Woodford Reserve 750 ml </li>
+                </ul>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div id="gin">
+            <ul> GIN
+                <li> Apostoles 700 ml </li>
+                <li> Apostoles Rosa Mosqueta 700 ml </li>
+                <li> Apostoles Fuerza Gaucha 750 ml </li>
+                <li> Beefeater Pink 700 ml </li>
+                <li> Beefeater 24 750 ml </li>
+                <li> Bombay 750 ml </li>
+                <li> Bosque 500 ml </li>
+                <li> Bosque Alta montaña 500 ml </li>
+                <li> Brighton 700 ml </li>
+                <li> Broker´s 750 ml </li>
+                <li> Buenos Aires 750 ml </li>
+                <li> Covent Dry 750 ml </li>
+                <li> D-1313 500 ml </li>
+                <li> Damrak 700 ml </li>
+                <li> Delirante 750 ml </li>
+                <li> Fifty Pounds 700 ml </li>
+                <li> Fifty Pounds Estuche Metalico 700 ml </li>
+                <li> Heraclito Dry 750 ml </li>
+                <li> Heraclito y Macedonio 750 ml </li>
+                <li> Heredero 750 ml </li>
+                <li> Hendrick´s 700 ml </li>
+                <li> Larios 700 ml </li>
+                <li> Larios Rose 700 ml </li>
+                <li> Le Tribute 700 ml </li>
+                <li> Mare 700 ml </li>
+                <li> Martin Miller´s 700 ml </li>
+                <li> Merle 750 ml </li>
+                <li> Mom 700 ml </li>
+                <li> Mom Rocks 700 ml </li>
+                <li> Moretti Dry 750 ml </li>
+                <li> Monkey 47 500 ml </li>
+                <li> Nordes 700 ml </li>
+                <li> Sorgin 750 ml </li>
+                <li> Tanqueray 700 ml </li>
+                <li> Tanqueray Sevilla 700 ml </li>
+                <li> Tanqueray N° 10 1 L </li>
+                <li> Terrier Old Tom 750 ml </li>
+                <li> Terrier Pink 750 ml </li>
+                <li> Terrier Wild 750 ml </li>
+                <li> Wolfram 750 ml </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div id="vodka">
+            <ul> VODKA
+                <li> Absolut  500 ml </li>
+                <li> Absolut 750 ml </li>
+                <li> Absolut Mango750 ml </li>
+                <li> Absolut Apeach750 ml </li>
+                <li> Absolut Mandarin750 ml </li>
+                <li> Absolut Vainilla 750 ml </li>
+                <li> Absolut Extrakt 750 ml </li>
+                <li> Belvedere 700 ml </li>
+                <li> Bulbash Abedul 500 ml </li>
+                <li> Bulbash Arandanos 500 ml </li>
+                <li> Bulbash Tilo y Miel 500 ml </li>
+                <li> Bulbash 500 ml </li>
+                <li> Danzka 750 ml </li>
+                <li> Finlandia 750 ml </li>
+                <li> Pan 750 ml </li>
+                <li> Sernova Citrus 700 ml </li>
+                <li> Sernova 700 ml </li>
+                <li> Smirnoff 700 ml </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div id="ron">
+            <ul> RON
+                <li> Appleton Signature 750 ml  </li>
+                <li> Bacardi Oro 750 ml  </li>
+                <li> Flor de Caña 7 años Black 750 ml </li>
+                <li> Havana 3 años 750 ml  </li>
+                <li> Santa Teresa Gran Reserva 5 años 750 ml </li>
+                <li> Zacapa Ambar 12 años 750 ml </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div id="varios">
+            <ul> VARIOS
+                <li> Amarula 750 ml con vaso </li>
+                <li> Angostura 200 ml </li>
+                <li> Angostura Orange 100 ml </li>
+                <li> Angostura Cacao 100 ml </li>
+                <li> Aperol 750 ml </li>
+                <li> Baileys 750 ml </li>
+                <li> Baileys Salted Caramel 750 ml </li>
+                <li> Campari 750 ml </li>
+                <li> Carpano Rosso 1 L </li>
+                <li> Christalino 700 ml </li>
+                <li> Cinzano Rosso 1 L </li>
+                <li> Cinzano Rosso 1757 1 L </li>
+                <li> Cinzano Dry 1757 1 L </li>
+                <li> Cointreau 700 ml </li>
+                <li> Cointreau Noir 750 ml </li>
+                <li> Cynar 750 ml </li>
+                <li> Cynar 70 750 ml </li>
+                <li> Fireball Cinnamon 750 ml </li>
+                <li> Giovannoni Rosso 750 ml </li>
+                <li> Grand Marnier 700 ml </li>
+                <li> Jack Daniel´s Honey 750 ml </li>
+                <li> Jägermeister Coolpack 350 ml </li>
+                <li> Jägermeister 1,75 L </li>
+                <li> Jim Beam Honey 750 ml </li>
+                <li> Jose Cuervo Silver 750 ml </li>
+                <li> Lunfa Rosado 750 ml </li>
+                <li> Lunfa Rosso 750 ml </li>
+                <li> Luxardo Triplum 750 ml </li>
+                <li> Martini Extra Dry 1 L </li>
+                <li> Pimm's 750 ml </li>
+                <li> Wild Turkey Honey 750 ml </li>
+            </ul>
         </div>
     </div>
 
