se guardan cambios seccion productos

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -40,15 +40,19 @@
         </div>
     </div>
     <div class="container">
-        <div id="whisky">
-            <ul> WHISKY
-                <ul> BLEND
+        <h2 class="whisky-lista"> WHISKY</h2>
+        <section id="whisky">
+            <div><img src="../dealers-drinks-images/productos-whisky.jpg" alt=""></div>
+
+        <div>
+            <h3>BLEND</h3>
+                <ul>
                     <li> Antiquary Red 700 ml </li>
                     <li> Ballantines 1 L </li>
                     <li> Ballantines 7 años 700 ml </li>
                     <li> Ballantines 12 años 750 ml </li>
                     <li> Chivas 12 años 750 ml </li>
-                    <li> Chivas Extra 13 años 750 ml  </li>
+                    <li> Chivas Extra 13 años 750 ml </li>
                     <li> Chivas 15 años 750 ml </li>
                     <li> Chivas 18 años 750 ml </li>
                     <li> Chivas Royal Salute 21 años 700 ml </li>
@@ -67,7 +71,10 @@
                     <li> Sir Edwards Beer Reserve 700 ml </li>
                     <li> White & Mackay 700 ml </li>
                 </ul>
-                <ul> SINGLE MALT
+        </div>
+        <div>
+                <h3>SINGLE MALT</h3>
+            <ul>
                     <li> Bruichladdich Classic Laddie 700 ml </li>
                     <li> Cardhu 12 años 700 ml </li>
                     <li> Glenfiddich 12 años 750 ml </li>
@@ -91,12 +98,11 @@
                     <li> The Macallan Triple Cask 12 años 700 ml </li>
                     <li> The Macallan Double Cask 12 años 700 ml </li>
                     <li> The Macallan Sherry Oak 12 años 700 ml </li>
-                </ul>
-                <ul> IRISH WHISKEY
-                    <li> Jameson 750 ml </li>
-                    <li> Jameson Cask Ipa 750 ml </li>
-                </ul>
-                <ul> AMERICAN WHISKEY
+            </ul>
+        </div>
+            <div>
+                <h3>AMERICAN WHISKEY</h3>
+                <ul>
                     <li> Bulleit 700 ml </li>
                     <li> Gentleman Jack 1 L </li>
                     <li> Jack Daniel´s 750 ml </li>
@@ -106,53 +112,68 @@
                     <li> Wild Turkey 40º 750 ml </li>
                     <li> Woodford Reserve 750 ml </li>
                 </ul>
-            </ul>
-        </div>
+                <h3>IRISH WHISKEY</h3>
+                <ul>
+                    <li> Jameson 750 ml </li>
+                    <li> Jameson Cask Ipa 750 ml </li>
+                </ul>
+            </div>
+
+        </section>
+
     </div>
     <div class="container">
+        <h2 class="gin-lista">GIN</h2>
         <div id="gin">
-            <ul> GIN
-                <li> Apostoles 700 ml </li>
-                <li> Apostoles Rosa Mosqueta 700 ml </li>
-                <li> Apostoles Fuerza Gaucha 750 ml </li>
-                <li> Beefeater Pink 700 ml </li>
-                <li> Beefeater 24 750 ml </li>
-                <li> Bombay 750 ml </li>
-                <li> Bosque 500 ml </li>
-                <li> Bosque Alta montaña 500 ml </li>
-                <li> Brighton 700 ml </li>
-                <li> Broker´s 750 ml </li>
-                <li> Buenos Aires 750 ml </li>
-                <li> Covent Dry 750 ml </li>
-                <li> D-1313 500 ml </li>
-                <li> Damrak 700 ml </li>
-                <li> Delirante 750 ml </li>
-                <li> Fifty Pounds 700 ml </li>
-                <li> Fifty Pounds Estuche Metalico 700 ml </li>
-                <li> Heraclito Dry 750 ml </li>
-                <li> Heraclito y Macedonio 750 ml </li>
-                <li> Heredero 750 ml </li>
-                <li> Hendrick´s 700 ml </li>
-                <li> Larios 700 ml </li>
-                <li> Larios Rose 700 ml </li>
-                <li> Le Tribute 700 ml </li>
-                <li> Mare 700 ml </li>
-                <li> Martin Miller´s 700 ml </li>
-                <li> Merle 750 ml </li>
-                <li> Mom 700 ml </li>
-                <li> Mom Rocks 700 ml </li>
-                <li> Moretti Dry 750 ml </li>
-                <li> Monkey 47 500 ml </li>
-                <li> Nordes 700 ml </li>
-                <li> Sorgin 750 ml </li>
-                <li> Tanqueray 700 ml </li>
-                <li> Tanqueray Sevilla 700 ml </li>
-                <li> Tanqueray N° 10 1 L </li>
-                <li> Terrier Old Tom 750 ml </li>
-                <li> Terrier Pink 750 ml </li>
-                <li> Terrier Wild 750 ml </li>
-                <li> Wolfram 750 ml </li>
-            </ul>
+            <div><img src="../dealers-drinks-images/productos-gin.jpg" alt=""></div>
+            <div>
+                <ul>
+                    <li> Apostoles 700 ml </li>
+                    <li> Apostoles Rosa Mosqueta 700 ml </li>
+                    <li> Apostoles Fuerza Gaucha 750 ml </li>
+                    <li> Beefeater Pink 700 ml </li>
+                    <li> Beefeater 24 750 ml </li>
+                    <li> Bombay 750 ml </li>
+                    <li> Bosque 500 ml </li>
+                    <li> Bosque Alta montaña 500 ml </li>
+                    <li> Brighton 700 ml </li>
+                    <li> Broker´s 750 ml </li>
+                    <li> Buenos Aires 750 ml </li>
+                    <li> Covent Dry 750 ml </li>
+                    <li> D-1313 500 ml </li>
+                    <li> Damrak 700 ml </li>
+                    <li> Delirante 750 ml </li>
+                    <li> Fifty Pounds 700 ml </li>
+                    <li> Fifty Pounds Estuche Metalico 700 ml </li>
+                    <li> Heraclito Dry 750 ml </li>
+                    <li> Heraclito y Macedonio 750 ml </li>
+                    <li> Heredero 750 ml </li>
+                </ul>
+                </div>
+                <div>
+                <ul>
+                                        <li> Hendrick´s 700 ml </li>
+                    <li> Larios 700 ml </li>
+                    <li> Larios Rose 700 ml </li>
+                    <li> Le Tribute 700 ml </li>
+                    <li> Mare 700 ml </li>
+                    <li> Martin Miller´s 700 ml </li>
+                    <li> Merle 750 ml </li>
+                    <li> Mom 700 ml </li>
+                    <li> Mom Rocks 700 ml </li>
+                    <li> Moretti Dry 750 ml </li>
+                    <li> Monkey 47 500 ml </li>
+                    <li> Nordes 700 ml </li>
+                    <li> Sorgin 750 ml </li>
+                    <li> Tanqueray 700 ml </li>
+                    <li> Tanqueray Sevilla 700 ml </li>
+                    <li> Tanqueray N° 10 1 L </li>
+                    <li> Terrier Old Tom 750 ml </li>
+                    <li> Terrier Pink 750 ml </li>
+                    <li> Terrier Wild 750 ml </li>
+                    <li> Wolfram 750 ml </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container">
