se aplican estilos a sección efemérides con sass

--- a/secciones/efemerides.html
+++ b/secciones/efemerides.html
@@ -10,10 +10,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../sass/main.css">
     </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado-fechas">
         <!--inicio del menú de navegación-->
         <nav>
             <ul class="menu">
@@ -24,15 +24,68 @@
                 <li><a href="./efemerides.html" target="Blank">Efemérides</a></li>
             </ul>
         </nav>
-
     </header>
 
 <section class="efemerides">
-<h2>Las efemérides del Dealer</h2>
-
+<h1>Efemérides</h1>
+<p>Algunas fechas importantes a tener en cuenta...</p>
 </section>
-
-
+<article class="fechas">
+<div>
+    <h2>ENERO</h2>
+</div>
+<div>
+    <h2>FEBRERO</h2>
+</div>
+<div>
+    <h2>MARZO</h2>
+    <H3>03 de marzo</H3>
+    <p>Día del Whiskey Irlandés</p>
+    <H3>17 de marzo</H3>
+    <p>San Patricio</p>
+</div>
+<div>
+    <h2>ABRIL</h2>
+    <h3>15 de abril</h3>
+    <p>Día del Bartender</p>
+</div>
+<div>
+    <h2>MAYO</h2>
+    <h3>3° sábado de mayo</h3>
+    <p>Día mundial del whisky</p>
+</div>
+<div>
+    <h2>JUNIO</h2>
+    <h3>10 de junio</h3>
+    <p>Día del gin</p>
+    <h3>14 de junio</h3>
+    <p>Día del bourbon</p>
+</div>
+<div>
+    <h2>JULIO</h2>
+</div>
+<div>
+    <h2>AGOSTO</h2>
+    <h3>16 de agosto</h3>
+    <p>Día mundial del ron</p>
+</div>
+<div>
+    <h2>SEPTIEMBRE</h2>
+</div>
+<div>
+    <h2>OCTUBRE</h2>
+    <h3>04 de octubre</h3>
+    <p>Día mundial del vodka</p>
+    <h3>19 de octubre</h3>
+    <p>Día del Gin&Tonic</p>
+</div>
+<div>
+    <h2>NOVIEMBRE</h2>
+</div>
+<div>
+    <h2>DICIEMBRE</h2>
+</div>
+</article>
 
 
 </body>
