--- a/secciones/recetas.html
+++ b/secciones/recetas.html
@@ -33,12 +33,12 @@
     <section class="recetas">
         <h1>Las recetas del Dealer</h1>
 
-        <article class="tom-collins">
+        <article id="tom-collins">
             <!--inicio receta tom collins-->
             <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
             <div><img src="../dealers-drinks-images/tom-collins-ingredientes.png"
                     alt="tom collins tom-collins-ingredientes"></div>
-            <div class="preparacion-tom-collins">
+            <div id="preparacion-tom-collins">
                 <h2>PREPARACIÓN</h2>
                 <p>En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e
                     integramos bien los ingredientes con una cuchara. Agregamos la soda hasta completar el vaso y
@@ -47,7 +47,7 @@
 
 
         </article>
-        <article class="negroni">
+        <article id="negroni">
             <div><img src="../dealers-drinks-images/receta-negroni-foto.png" alt="negroni"></div>
             <div><img src="../dealers-drinks-images/negroni-ingredientes.png" alt="negroni-ingredientes"></div>
             <div class="preparacion-negroni">
@@ -59,7 +59,7 @@
             </div>
 
         </article>
-        <article class="voodoo">
+        <article id="voodoo">
             <div><img src="../dealers-drinks-images/receta-voodoo-foto.jpg" alt="voodoo"></div>
             <div><img src="../dealers-drinks-images/voodoo-ingredientes.jpg" alt="voodo-ingtredientes"></div>
             <div>
@@ -71,7 +71,7 @@
             </div>
 
         </article>
-        <article class="long-island">
+        <article id="long-island">
             <div><img src="../dealers-drinks-images/receta-long-island-foto.png" alt="long-island-iced-tea"></div>
             <div><img src="../dealers-drinks-images/long-island-ingredientes.png" alt="long-island-ingtredientes"></div>
             <div>
@@ -83,7 +83,7 @@
             </div>
 
         </article>
-        <article class="clarito">
+        <article id="clarito">
             <div><img src="../dealers-drinks-images/receta-clarito-foto.jpg" alt="clarito"></div>
             <div><img src="../dealers-drinks-images/clarito-ingredientes.jpg" alt="clarito-ingtredientes"></div>
             <div>
@@ -93,7 +93,7 @@
                 </P>
             </div>
         </article>
-        <article class="boulevardier">
+        <article id="boulevardier">
             <div><img src="../dealers-drinks-images/receta-boulevardier-foto.png" alt="boulevardier"></div>
             <div><img src="../dealers-drinks-images/boulevardier-ingredientes.png" alt="boulevardier-ingtredientes"></div>
             <div>
@@ -103,7 +103,7 @@
                 </P>
             </div>
         </article>
-        <article class="daiquiri">
+        <article id="daiquiri">
             <div><img src="../dealers-drinks-images/receta-daiquiri-foto.jpeg" alt="daiquiri"></div>
             <div><img src="../dealers-drinks-images/daiquiri-Ingredientes.jpeg" alt="daiquiri-ingtredientes"></div>
             <div>
@@ -113,7 +113,7 @@
                 </P>
             </div>
         </article>
-        <article class="caipiroska">
+        <article id="caipiroska">
             <div><img src="../dealers-drinks-images/receta-caipiroska-foto.jpg" alt="caipiroska"></div>
             <div><img src="../dealers-drinks-images/caipiroska-ingredientes.jpg" alt="caipiroska-ingtredientes"></div>
             <div>
