se aplican map, mixin y extend a seccion efemérides

--- a/secciones/efemerides.html
+++ b/secciones/efemerides.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dealer´s Drinks</title>
+        <title>Dealer´s Drinks - Fechas importantes</title>
+        <meta name="description" content="Efemerides, fechas importantes para la coctelería">
+        <meta name="keywords" content="cocteleria, bartender, whisky, aperitivo, gin, vodka, ron, licor">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
@@ -86,6 +88,15 @@
     <h2>DICIEMBRE</h2>
 </div>
 </article>
+<footer class="piepag__fechas">
+    <div class="container">
+        <img src="../dealers-drinks-images/brindis.jpg" alt="cocteleria">
+        <h3>Te invitamos a celebrar con nosotros</h3>
+        <img src="../dealers-drinks-images/brindis-2.jpg" alt="cocteleria">
+
+
+    </div>
+</footer>
 
 
 </body>
