--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dealer´s Drinks</title>
+    <meta name="description" content="Tienda Virtual de Bebidas Espirituosas">
+    <meta name="keywords" content="Bebidas, espirituosas, alcoholicas, whisky, aperitivo, gin, vodka, ron, licor">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
