agrego footer a recetas

--- a/secciones/recetas.html
+++ b/secciones/recetas.html
@@ -67,9 +67,10 @@
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón recién exprimido. Completamos con jugo de manzana. 
+                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón
+                    recién exprimido. Completamos con jugo de manzana.
                     El toque final es una rodaja de limón.
-                                    </P>
+                </P>
             </div>
 
         </article>
@@ -79,9 +80,10 @@
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón recién exprimido. Completamos con jugo de manzana. 
+                    En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón
+                    recién exprimido. Completamos con jugo de manzana.
                     El toque final es una rodaja de limón.
-                                    </P>
+                </P>
             </div>
 
         </article>
@@ -91,17 +93,22 @@
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En un vaso de composición lleno de hielo agregamos 2 onzas de gin, media onza de vermut seco o extra seco, integramos bien con una cuchara larga y colamos en una copa cóctel sin hielo, previamente enfriada. Antes de agregarle la piel de limón, debemos apretarla para que suelte su aceite esencial dentro del cóctel.  
+                    En un vaso de composición lleno de hielo agregamos 2 onzas de gin, media onza de vermut seco o extra
+                    seco, integramos bien con una cuchara larga y colamos en una copa cóctel sin hielo, previamente
+                    enfriada. Antes de agregarle la piel de limón, debemos apretarla para que suelte su aceite esencial
+                    dentro del cóctel.
                 </P>
             </div>
         </article>
         <article id="boulevardier">
             <div><img src="../dealers-drinks-images/receta-boulevardier-foto.png" alt="boulevardier"></div>
-            <div><img src="../dealers-drinks-images/boulevardier-ingredientes.png" alt="boulevardier-ingtredientes"></div>
+            <div><img src="../dealers-drinks-images/boulevardier-ingredientes.png" alt="boulevardier-ingtredientes">
+            </div>
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien con una cuchara. Por último le sumamos la rodaja de naranja. 
+                    En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien
+                    con una cuchara. Por último le sumamos la rodaja de naranja.
                 </P>
             </div>
         </article>
@@ -111,7 +118,10 @@
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En una coctelera agregá todos los ingredientes incluyendo las frutillas limpias y cortadas en trozos. Machacalas con un mortero y llená la coctelera de hielo. Cerrala con firmeza y agitala durante diez segundos. Por último, colá el contenido con la ayuda de un colador oruga, dentro de  una copa cóctel sin hielo previamente enfriada.   
+                    En una coctelera agregá todos los ingredientes incluyendo las frutillas limpias y cortadas en
+                    trozos. Machacalas con un mortero y llená la coctelera de hielo. Cerrala con firmeza y agitala
+                    durante diez segundos. Por último, colá el contenido con la ayuda de un colador oruga, dentro de una
+                    copa cóctel sin hielo previamente enfriada.
                 </P>
             </div>
         </article>
@@ -121,14 +131,24 @@
             <div>
                 <h2>PREPARACIÓN</h2>
                 <P>
-                    En un vaso de trago corto colocamos media lima cortada en trozos. Agregamos 2 o 3 cucharadas de azúcar o 15ml (media onza) de almíbar. Volcamos el vodka en la preparación, machacamos suavemente la lima y luego le agregamos el hielo molido hasta colmar el vaso. Finalmente integramos bien con una cuchara.
+                    En un vaso de trago corto colocamos media lima cortada en trozos. Agregamos 2 o 3 cucharadas de
+                    azúcar o 15ml (media onza) de almíbar. Volcamos el vodka en la preparación, machacamos suavemente la
+                    lima y luego le agregamos el hielo molido hasta colmar el vaso. Finalmente integramos bien con una
+                    cuchara.
                 </P>
             </div>
         </article>
-
-
-
     </section>
+    <div class="container">
+
+        <footer class="receta__footer">
+
+            <img src="../dealers-drinks-images/recetas-footer.jpg" alt="recetas-faciles">
+        </footer>
+    </div>
+
+
+
 
 
 
